objects/ssot__HealthcareDiagnosis__dlm.object
<CustomObject>
    <fields>
        <fullName>ssot__CategoryText__c</fullName>
        <label>Category</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__CodeDescription__c</fullName>
        <label>Code Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__CodeText__c</fullName>
        <label>Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__CodeTypeText__c</fullName>
        <label>Code Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceId__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceObjectId__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__EffectiveDate__c</fullName>
        <label>Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ssot__EndDate__c</fullName>
        <label>EndDate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ssot__Gender__c</fullName>
        <label>Gender</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Id__c</fullName>
        <label>Healthcare Diagnosis Id</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InternalOrganizationId__c</fullName>
        <label>Internal Organization</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__IsActive__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ssot__IsComplicationOrComorbidity__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Complication Or Comorbidity</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ssot__IsHospitalAcquiredCondition__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Hospital Acquired Condition</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ssot__IsMajorComplicationOrComorbidity__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Major Complication Or Comorbidity</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ssot__IsPresentOnAdmissionExempt__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Present On Admission Exempt</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ssot__IsPrimaryDiagnosis__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Primary Diagnosis</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ssot__IsUnacceptablePrincipalDxIpAdmit__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Unacceptable Principal DxIp Admit</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ssot__Name__c</fullName>
        <label>Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
</CustomObject>